--- a/admin.html
+++ b/admin.html
@@ -29,7 +29,7 @@
         #adminLoginBox { position: relative; transform: rotateY(0deg); opacity: 1; z-index: 2; justify-content: center; align-items: center; }
         #auth-container.is-active #adminLoginBox { transform: rotateY(180deg); opacity: 0; pointer-events: none; }
         #adminPanelBox { position: relative; transform: rotateY(-180deg); opacity: 0; }
-        #auth-container.is-active { max-width: 900px; }
+        #auth-container.is-active { max-width: 900px; max-height: 90vh; height: 750px;}
         #auth-container.is-active #adminPanelBox { transform: rotateY(0deg); opacity: 1; z-index: 2; position: relative; }
         .login-content { width: 100%; max-width: 330px; position: relative; z-index: 2; }
         .header { text-align: center; margin-bottom: 30px; }
@@ -43,7 +43,7 @@
         .input-wrapper { position: relative; }
         .input-wrapper i { position: absolute; left: 16px; top: 50%; transform: translateY(-50%); color: var(--primary); font-size: 16px; transition: var(--transition-fast); }
         .input-field { width: 100%; padding: 14px 16px 14px 45px; background: rgba(0, 0, 0, 0.2); border: 1px solid var(--glass-border); border-radius: 10px; color: #fff; font-size: 1rem; transition: var(--transition-fast); }
-        .input-field[readonly] { background: rgba(0,0,0,0.4); cursor: not-allowed; }
+        .input-field[readonly] { background: rgba(0,0,0,0.4); cursor: default; }
         .input-field:focus { outline: none; border-color: var(--primary); box-shadow: 0 0 15px rgba(255, 126, 95, 0.4); }
         .input-field:focus ~ i { color: var(--accent1); transform: translateY(-50%) scale(1.1); }
         #togglePassword { right: 16px; left: auto; cursor: pointer; }
@@ -56,11 +56,21 @@
         .panel-header h1 i { color: var(--primary); margin-right: 10px; }
         .logout-btn { background: var(--glass); border: 1px solid var(--glass-border); color: var(--light-text); width: 45px; height: 45px; border-radius: 50%; cursor: pointer; transition: var(--transition-fast); display: flex; align-items: center; justify-content: center; flex-shrink: 0; }
         .logout-btn:hover { background: var(--primary); color: #fff; transform: rotate(15deg); }
-        .panel-main { flex-grow: 1; overflow-y: auto; padding: 20px 15px 0 0; width: 100%; position: relative; z-index: 2; }
+        /* Style untuk scroll yang benar */
+        .panel-main { flex-grow: 1; overflow-y: auto; padding-right: 15px; width: 100%; position: relative; z-index: 2; }
         .panel-section { background: rgba(255, 255, 255, 0.03); border-radius: 18px; padding: 25px; margin-bottom: 25px; border: 1px solid var(--glass-border); }
         .section-title { display: flex; align-items: center; gap: 15px; font-size: 1.3rem; font-weight: 600; color: var(--light-text); margin-bottom: 25px; }
         .section-title i { color: var(--primary); font-size: 1.5rem; }
-        .panel-actions { flex-shrink: 0; width: 100%; padding: 20px 30px; background: rgba(15, 18, 26, 0.8); backdrop-filter: blur(10px); border-top: 1px solid var(--glass-border); border-bottom-left-radius: 24px; border-bottom-right-radius: 24px; display: flex; justify-content: flex-end; align-items: center; gap: 20px; margin-top: auto; padding-top: 20px; }
+        /* Layout Grid untuk Desktop */
+        @media (min-width: 992px) {
+            #adminPanelBox .box { padding: 40px; }
+            .panel-main { display: grid; grid-template-columns: 1fr 1fr; gap: 25px; padding-top: 20px; }
+            .panel-section { margin-bottom: 0; }
+            .panel-section[data-span="2"] { grid-column: span 2; }
+        }
+        .panel-actions { flex-shrink: 0; width: 100%; padding: 20px 30px; background: rgba(15, 18, 26, 0.8); backdrop-filter: blur(10px); border-top: 1px solid var(--glass-border); border-bottom-left-radius: 24px; border-bottom-right-radius: 24px; display: flex; justify-content: space-between; align-items: center; margin-top: auto; padding-top: 20px; }
+        .back-link { color: var(--light-text); text-decoration: none; font-weight: 500; transition: var(--transition-fast); }
+        .back-link:hover { color: var(--primary); }
         .btn-save { background: linear-gradient(to right, var(--primary) 0%, var(--secondary) 100%); border: none; border-radius: 10px; color: var(--darker); font-size: 1rem; font-weight: 600; padding: 12px 25px; cursor: pointer; transition: var(--transition-fast); display: flex; align-items: center; gap: 10px; }
         .btn-save:hover { transform: translateY(-3px); box-shadow: 0 8px 20px rgba(255, 126, 95, 0.4); }
         .feedback-modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); backdrop-filter: blur(8px); z-index: 3000; justify-content: center; align-items: center; }
@@ -131,6 +141,7 @@
                     </div>
                 </form>
                 <div class="panel-actions">
+                    <a href="index.html" class="back-link"><i class="fas fa-arrow-left"></i> Back to Main Page</a>
                     <button type="submit" form="editForm" class="btn-save"><i class="fas fa-save"></i> Save Changes</button>
                 </div>
             </div>
