--- a/admin.html
+++ b/admin.html
@@ -41,7 +41,9 @@
         .input-group { margin-bottom: 20px; position: relative; }
         .input-group label { display: block; color: var(--light-text); font-size: 0.85rem; font-weight: 500; margin-bottom: 8px; padding-left: 8px; }
         .input-wrapper { position: relative; }
-        .input-wrapper i { position: absolute; left: 16px; top: 50%; transform: translateY(-50%); color: var(--primary); font-size: 16px; transition: var(--transition-fast); }
+        .input-wrapper i { position: absolute; left: 16px; top: 50%; transform: translateY(-50%); color: var(--primary); font-size: 16px; transition: var(--transition-fast); z-index: 3; }
+        .input-wrapper .icon-right { left: auto; right: 16px; cursor: pointer; }
+        .input-wrapper .icon-right:hover { color: var(--accent1); transform: translateY(-50%) scale(1.1); }
         .input-field { width: 100%; padding: 14px 16px 14px 45px; background: rgba(0, 0, 0, 0.2); border: 1px solid var(--glass-border); border-radius: 10px; color: #fff; font-size: 1rem; transition: var(--transition-fast); }
         .input-field[readonly] { background: rgba(0,0,0,0.4); cursor: default; }
         .input-field:focus { outline: none; border-color: var(--primary); box-shadow: 0 0 15px rgba(255, 126, 95, 0.4); }
@@ -56,18 +58,10 @@
         .panel-header h1 i { color: var(--primary); margin-right: 10px; }
         .logout-btn { background: var(--glass); border: 1px solid var(--glass-border); color: var(--light-text); width: 45px; height: 45px; border-radius: 50%; cursor: pointer; transition: var(--transition-fast); display: flex; align-items: center; justify-content: center; flex-shrink: 0; }
         .logout-btn:hover { background: var(--primary); color: #fff; transform: rotate(15deg); }
-        /* Style untuk scroll yang benar */
         .panel-main { flex-grow: 1; overflow-y: auto; padding-right: 15px; width: 100%; position: relative; z-index: 2; }
         .panel-section { background: rgba(255, 255, 255, 0.03); border-radius: 18px; padding: 25px; margin-bottom: 25px; border: 1px solid var(--glass-border); }
         .section-title { display: flex; align-items: center; gap: 15px; font-size: 1.3rem; font-weight: 600; color: var(--light-text); margin-bottom: 25px; }
         .section-title i { color: var(--primary); font-size: 1.5rem; }
-        /* Layout Grid untuk Desktop */
-        @media (min-width: 992px) {
-            #adminPanelBox .box { padding: 40px; }
-            .panel-main { display: grid; grid-template-columns: 1fr 1fr; gap: 25px; padding-top: 20px; }
-            .panel-section { margin-bottom: 0; }
-            .panel-section[data-span="2"] { grid-column: span 2; }
-        }
         .panel-actions { flex-shrink: 0; width: 100%; padding: 20px 30px; background: rgba(15, 18, 26, 0.8); backdrop-filter: blur(10px); border-top: 1px solid var(--glass-border); border-bottom-left-radius: 24px; border-bottom-right-radius: 24px; display: flex; justify-content: space-between; align-items: center; margin-top: auto; padding-top: 20px; }
         .back-link { color: var(--light-text); text-decoration: none; font-weight: 500; transition: var(--transition-fast); }
         .back-link:hover { color: var(--primary); }
@@ -84,6 +78,44 @@
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
         .qr-preview-container { margin-top: 15px; }
         .qr-preview-image { max-width: 150px; border-radius: 10px; border: 1px solid var(--glass-border); display: none; }
+
+        /* Responsive Layout Grid for Desktop */
+        @media (min-width: 992px) {
+            #adminPanelBox .box { padding: 40px; }
+            .panel-main { display: grid; grid-template-columns: 1fr 1fr; gap: 25px; padding-top: 20px; }
+            .panel-section { margin-bottom: 0; }
+            .panel-section[data-span="2"] { grid-column: span 2; }
+        }
+
+        /* Modern Responsive Styles for Mobile */
+        @media (max-width: 991px) {
+            #auth-container.is-active {
+                height: 95vh;
+                max-height: none;
+            }
+            #adminPanelBox {
+                padding: 20px 15px;
+            }
+            .panel-main {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                padding-right: 5px; /* Adjust scrollbar padding */
+            }
+            .panel-section {
+                padding: 20px;
+                margin-bottom: 0;
+            }
+            .panel-actions {
+                 padding: 20px;
+                 flex-direction: column;
+                 align-items: stretch;
+                 gap: 15px;
+            }
+            .btn-save {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
@@ -119,8 +151,8 @@
                         <div class="input-group">
                             <label for="shareableLink">Copy and share this link with your guests</label>
                             <div class="input-wrapper">
-                                <input type="text" id="shareableLink" class="input-field" readonly>
-                                <i class="fas fa-link"></i>
+                                <input type="text" id="shareableLink" class="input-field" readonly style="padding-right: 45px;">
+                                <i class="fas fa-copy icon-right" id="copyLinkBtn" title="Copy to clipboard"></i>
                             </div>
                         </div>
                     </div>
@@ -279,6 +311,29 @@
                 this.classList.toggle('fa-eye-slash');
             });
             document.getElementById('qrImageUrlInput').addEventListener('input', updateQrPreview);
+
+            // New: Add click listener for the copy button
+            document.getElementById('copyLinkBtn').addEventListener('click', function() {
+                const linkInput = document.getElementById('shareableLink');
+                const linkToCopy = linkInput.value;
+
+                if (navigator.clipboard) {
+                    navigator.clipboard.writeText(linkToCopy).then(() => {
+                        showFeedback('success', 'Tersalin!', 'Link berhasil disalin ke clipboard.');
+                        setTimeout(hideFeedback, 2000);
+                        // Visual feedback on icon
+                        this.classList.remove('fa-copy');
+                        this.classList.add('fa-check');
+                        setTimeout(() => {
+                            this.classList.remove('fa-check');
+                            this.classList.add('fa-copy');
+                        }, 2000);
+                    }).catch(err => {
+                        showFeedback('failure', 'Gagal Menyalin', 'Tidak dapat menyalin link.');
+                        setTimeout(hideFeedback, 2500);
+                    });
+                }
+            });
         });
     </script>
 </body>
