--- a/admin.html
+++ b/admin.html
@@ -233,7 +233,7 @@
                         <div class="input-wrapper"><input type="password" id="adminPass" class="input-field" placeholder="••••••••"><i class="fas fa-key icon-left"></i><i class="fas fa-eye icon-right" id="togglePassword"></i></div>
                     </div>
                     <button class="btn" onclick="adminLogin()"><i class="fas fa-sign-in-alt"></i> Masuk</button>
-                    <p class="register-link">Admin baru? <a href="register.html">Buat Akun Disini</a></p>
+                    <p class="register-link">Belum ada akun? <a href="register.html">Regist here</a></p>
                 </div>
             </div>
             <div class="box" id="adminPanelBox">
