--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Admin Panel - Happy Birthday</title>
+    <title>Admin Panel</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -222,7 +222,7 @@
                     <div class="header">
                         <div class="header-icon"><i class="fas fa-user-lock"></i></div>
                         <h1>Admin Login</h1>
-                        <p>Akses panel dengan akun terdaftar</p>
+                        <p>Login dengan akun yang terdaftar</p>
                     </div>
                     <div class="input-group">
                         <label>Username</label>
