--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Admin Panel - Dark Neumorphic</title>
+    <title>Admin Panel</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -306,12 +306,12 @@
                 <div class="login-content">
                     <div class="header">
                         <div class="header-icon"><i class="fas fa-user-shield"></i></div>
-                        <h1>Admin Login</h1>
-                        <p>Akses ke panel kontrol</p>
+                        <h1>Admin panel</h1>
+                        <p>Login for using panel</p>
                     </div>
                     <div class="input-group">
                         <label>Username</label>
-                        <div class="input-wrapper"><i class="fas fa-user icon-left"></i><input type="text" id="adminUser" class="input-field" placeholder="Ketik username"></div>
+                        <div class="input-wrapper"><i class="fas fa-user icon-left"></i><input type="text" id="adminUser" class="input-field" placeholder="username "></div>
                     </div>
                     <div class="input-group">
                         <label>Password</label>
@@ -319,7 +319,7 @@
                     </div>
                     <button class="btn" onclick="adminLogin()"><i class="fas fa-sign-in-alt"></i> Masuk</button>
                     
-                    <p class="register-link">Belum punya akun? <a href="register.html">Daftar di sini</a></p>
+                    <p class="register-link">Don't have an account? <a href="register.html">Sign up</a></p>
                 </div>
             </div>
 
